--- a/style.css
+++ b/style.css
@@ -57,9 +57,25 @@ a:hover{
 }
 
 .logo{
-    font-size: 2rem;
+    font-size: 1.5rem;
+    position: relative;
+    margin: auto;
 }
 
+#desktop-nav a {
+    float: left;
+    display: flex;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
 
 .logo.hover{
     cursor: default;
@@ -206,7 +222,8 @@ section {
 
 .icon {
     cursor: pointer;
-    height: 2rem;
+    height: 1.5rem;
+    position: relative;
 }
 
 /* BUTTON */
@@ -269,6 +286,12 @@ section {
     margin-bottom: 2rem;
 }
 
+.whatiamdoing-containers {
+    gap:2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
 .about-details-container {
     justify-content: center;
     flex-direction: column;
@@ -280,7 +303,8 @@ section {
 }
 
 .about-pic {
-    border-radius: 2rem;
+    border-radius: 5rem;
+    text-align: center;
 }
 
 .arrow {
@@ -289,11 +313,21 @@ section {
     bottom: 2.5rem;
 }
 
-.details-container {
-    padding: 1.5rem;
+/* .details-container {
+    padding: 0.5rem;
     flex:1;
     background: white;
-    border-radius: 2rem;
+    border-radius: 1rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    text-align: center
+} */
+
+.whatiamdoing-container {
+    padding: 0.5rem;
+    flex:1;
+    background: white;
+    border-radius: 1rem;
     border: rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163,163,163);
     text-align: center
@@ -301,18 +335,46 @@ section {
 
 .section-container {
     gap: 3rem;
-    height: 50%;
+    height: 80%;
+}
+
+.detail-of-container {
+    text-align: center;
 }
 
 .section__pic-container {
     height: 400px;
-    width: 600px;
+    width: 400px;
     margin: auto 0;
-    margin-top: auto;
 }
 
 /* EXPERIENCE */
 
-#experience {
+#whatiamdoing {
     position: relative;
+}
+
+ul, ol {
+    margin:0;
+    padding:5px;
+}
+
+#skills {
+    text-align: left;
+}
+
+
+.top-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; /* Adjust height as needed */
+    background-color: #333; /* Choose your background color */
+    z-index: 9999; /* Make sure it's on top of other content */
+}
+
+.content {
+    margin-top: 50px; /* Ensure content starts below the background */
+    padding: 20px;
 }
